--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">BGFetch Demo</string>
-    <string name="title_activity_main">BGFetch Demo</string>
-    <string name="package_name">com.transistorsoft.backgroundfetch.capacitor.demo</string>
-    <string name="custom_url_scheme">com.transistorsoft.backgroundfetch.capacitor.demo</string>
+    <string name="app_name">BGFirebase Demo</string>
+    <string name="title_activity_main">BGFirebase Demo</string>
+    <string name="package_name">com.transistorsoft.firebase.capacitor.demo</string>
+    <string name="custom_url_scheme">com.transistorsoft.firebase.capacitor.demo</string>
 </resources>
